app/styles/sections/_postActions.scss
.post-action-wrapper {
  margin: 10px 0;
  margin-bottom: 0;
}

.new-post-something {
  position: relative;
  background: #fff;
  padding: 10px;
  border: 1px solid $middle;
  @include border-radius($radius);
}

.post-box {
  @include display-box;
  display: -ms-flexbox;
  @include border-top-radius($radius);
  border: 0px solid #ccc;
  width: 100%;
  border-bottom: 0;
  background: $bright;

  .image-preview {
    position: relative;
    width: 80px;
    height: 80px;
    overflow: hidden;
    padding: 5px;

    .add-icon {
      border: 2px solid $background;
      @include border-radius($radius);
      height: 70px;
      width: 70px;
    }

    i {
      font-size: 25px;
      width: 68px;
      height: 68px;
      color: $primary;
      &::before {
        position: relative;
        left: 20px;
        top: 21px;
      }
      &:hover {
        cursor: pointer;
      }
    }

    img {
      width: auto;
      height: 70px;

      &:hover {
        cursor: pointer;
      }
    }
  }

  textarea {
    border: 0;
    height: 80px;
    background: $bright;
    padding: 15px 10px;
    @include box-shadow(none);

    &:focus,
    &:active {
      outline: 0;
      border: 0;
      @include box-shadow(none);
     }
  }
}

.post-text {
  @include box-flex(1);
}


.post-submit {
  button {
    @include border-top-radius(0);
  }
}

.post-media-select {
  position: absolute;
  top: 0;
  left: 0;
  height: 133px;
  width: 100%;
  background: #fff;

  ul {
    padding: 44px 0;
    margin: 0;
  }

  li {
    display: table-cell;
    width: 1%;
    text-align: center;
  }
}

